--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - run: docker login -u ${{ secrets.akm47 }} -p ${{ secrets.Physics@13 }}
       - run: docker build -t akm47/Docker-React -f Dockerfile.dev .
       - run: docker run -e CI=true akm47/Docker-React npm test
