--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,6 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
-      - "3000:3000"
-    volumes:
-      - /home/node/app/node_modules
-      - /home/kali/frontend:/home/node/app
-  
-  tests:
-    build: 
-      context: .
-      dockerfile: Dockerfile.dev
-
-    volumes:
-      - /home/node/app/node_modules
-      - /home/kali/frontend:/home/node/app
-    command: ['npm', 'run', 'test']
+      - '80:80'
