--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,11 @@ jobs:
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v18
         with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: docker-gh
           environment_name: Dockergh-env
-          existing_bucket_name: elasticbeanstalk-ap-south-1-992382837996
-          region: ap-south-1
+          existing_bucket_name: elasticbeanstalk-ap-south-1-992382837996 
+          region: us-east-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
