--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker build -t akm47/docker-react -f Dockerfile.dev .
-      - run: docker run -e CI=true akm47/docker-frontend npm test
+      - run: docker run -e CI=true akm47/docker-react npm test
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
